# cortexcode

./: .gitignore  CHANGELOG.md  Cargo.toml  E2E_TESTING_SUMMARY.md  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_COMPLETE_FINAL.md  MIGRATION_FINAL_SESSION_SUMMARY.md  MIGRATION_SESSION_SUMMARY.md  MIGRATION_STATUS.md  MIGRATION_VIM_JUMP_COMPLETE.md  OPENCODE_E2E_TEST_REPORT.md  QUICKSTART.md  README.md  TEST_RECORD.md  run_advanced_tests.sh  run_e2e_tests.sh
.github/workflows/: binaries.yml  ci.yml  merge-release.yml  release.yml  reserve-names.yml
.hoocode/dispatch/dispatch-1784478017412-d4hmwg/: dispatch-log.json  output.json  result.json  session.jsonl
crates/cortexcode/: Cargo.toml  README.md
crates/cortexcode-agent/: Cargo.toml  README.md
crates/cortexcode-agent-compaction/: Cargo.toml  README.md
crates/cortexcode-agent-compaction/src/: lib.rs
crates/cortexcode-agent-core/: Cargo.toml  README.md
crates/cortexcode-agent-core/src/: agent_loop.rs  lib.rs  types.rs
crates/cortexcode-agent-harness/: Cargo.toml  README.md
crates/cortexcode-agent-harness/src/: lib.rs  messages.rs  prompt_templates.rs  system_prompt.rs
crates/cortexcode-agent-loop/: Cargo.toml  README.md
crates/cortexcode-agent-loop/src/: lib.rs
crates/cortexcode-agent-mcp/: Cargo.toml  README.md
crates/cortexcode-agent-mcp/src/: error.rs  lib.rs  loader.rs  transport.rs
crates/cortexcode-agent-mcp/tests/: load_mcp_tools.rs
crates/cortexcode-agent-session/: Cargo.toml  README.md
crates/cortexcode-agent-session/src/: lib.rs  store.rs
crates/cortexcode-agent-tools/: Cargo.toml  README.md
crates/cortexcode-agent-tools/src/: lib.rs
crates/cortexcode-agent-types/: Cargo.toml  README.md
crates/cortexcode-agent-types/src/: lib.rs
crates/cortexcode-agent/src/: lib.rs
crates/cortexcode-ai/: Cargo.toml  README.md
crates/cortexcode-ai-env/: Cargo.toml  README.md
crates/cortexcode-ai-env/src/: lib.rs
crates/cortexcode-ai-images/: Cargo.toml  README.md
crates/cortexcode-ai-images/src/: lib.rs  openrouter.rs  types.rs
crates/cortexcode-ai-models/: Cargo.toml  README.md
crates/cortexcode-ai-models/data/: models.json
crates/cortexcode-ai-models/src/: lib.rs
crates/cortexcode-ai-oauth/: Cargo.toml  README.md
crates/cortexcode-ai-oauth/src/: anthropic.rs  github_copilot.rs  lib.rs  pkce.rs  types.rs
crates/cortexcode-ai-provider-anthropic/: Cargo.toml  README.md
crates/cortexcode-ai-provider-anthropic/src/: lib.rs  request.rs
crates/cortexcode-ai-provider-azure/: Cargo.toml  README.md
crates/cortexcode-ai-provider-azure/src/: lib.rs  request.rs
crates/cortexcode-ai-provider-faux/: Cargo.toml  README.md
crates/cortexcode-ai-provider-faux/src/: lib.rs
crates/cortexcode-ai-provider-google/: Cargo.toml  README.md
crates/cortexcode-ai-provider-google/src/: lib.rs  request.rs  shared.rs  sse.rs
crates/cortexcode-ai-provider-openai/: Cargo.toml  README.md
crates/cortexcode-ai-provider-openai/src/: lib.rs  request.rs
crates/cortexcode-ai-stream/: Cargo.toml  README.md
crates/cortexcode-ai-stream/src/: lib.rs
crates/cortexcode-ai-types/: Cargo.toml  README.md
crates/cortexcode-ai-types/src/: lib.rs
crates/cortexcode-ai-util/: Cargo.toml  README.md
crates/cortexcode-ai-util/src/: lib.rs
crates/cortexcode-ai/src/: lib.rs
crates/cortexcode-code/: Cargo.toml  README.md
crates/cortexcode-code-config/: Cargo.toml  README.md
crates/cortexcode-code-config/src/: lib.rs  migrate.rs
crates/cortexcode-code-extensions/: Cargo.toml  README.md
crates/cortexcode-code-extensions/src/: lib.rs
crates/cortexcode-code-main/: Cargo.toml  README.md
crates/cortexcode-code-main/src/: auth.rs  lib.rs  main.rs  permission_dialog.rs  runtime.rs
crates/cortexcode-code-print/: Cargo.toml  README.md
crates/cortexcode-code-print/src/: lib.rs
crates/cortexcode-code-prompts/: Cargo.toml  README.md
crates/cortexcode-code-prompts/src/: lib.rs
crates/cortexcode-code-resources/: Cargo.toml  README.md
crates/cortexcode-code-resources/src/: lib.rs
crates/cortexcode-code-rpc/: Cargo.toml  README.md
crates/cortexcode-code-rpc/src/: lib.rs
crates/cortexcode-code-session/: Cargo.toml  README.md
crates/cortexcode-code-session/src/: context.rs  entry.rs  lib.rs  manager.rs
crates/cortexcode-code-subagents/: Cargo.toml  README.md
crates/cortexcode-code-subagents/src/: lib.rs
crates/cortexcode-code-tools/: Cargo.toml  README.md
crates/cortexcode-code-tools/src/: lib.rs  permissions.rs
crates/cortexcode-code/src/: lib.rs
crates/cortexcode-tui/: Cargo.toml  README.md
crates/cortexcode-tui-components/: Cargo.toml  README.md
crates/cortexcode-tui-components/src/: box_component.rs  cancellable_loader.rs  color.rs  image.rs  input.rs  lib.rs  loader.rs  select_list.rs  settings_list.rs  spacer.rs  text.rs  truncated_text.rs
crates/cortexcode-tui-components/src/autocomplete/: mod.rs  path_utils.rs
crates/cortexcode-tui-editing/: Cargo.toml  README.md
crates/cortexcode-tui-editing/src/: kill_ring.rs  lib.rs  undo_stack.rs
crates/cortexcode-tui-fuzzy/: Cargo.toml  README.md
crates/cortexcode-tui-fuzzy/src/: lib.rs
crates/cortexcode-tui-images/: Cargo.toml  README.md
crates/cortexcode-tui-images/src/: dimensions.rs  iterm2.rs  kitty.rs  lib.rs
crates/cortexcode-tui-keys/: Cargo.toml  README.md
crates/cortexcode-tui-keys/src/: constants.rs  keybindings.rs  kitty.rs  lib.rs  matching.rs  parse.rs  state.rs
crates/cortexcode-tui-render/: Cargo.toml  README.md
crates/cortexcode-tui-render/src/: component.rs  lib.rs  overlay.rs  tui.rs
crates/cortexcode-tui-terminal/: Cargo.toml  README.md
crates/cortexcode-tui-terminal/src/: lib.rs  stdin_buffer.rs
crates/cortexcode-tui-util/: Cargo.toml  README.md
crates/cortexcode-tui-util/src/: ansi.rs  lib.rs  text.rs  width.rs
crates/cortexcode-tui/src/: lib.rs
crates/cortexcode/src/: lib.rs
docs/design/: hoocode-to-cortexcode-migration.md
scripts/: bump_versions.py  convert_models_to_json.py  generate_crates.sh  parity_test.sh  publish_packages.py
tests/: opencode_e2e_test.rs
(+6 files in other folders)
