[package]
name = "cortexcode-agent-compaction"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Session compaction for cortex agents"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
cortexcode-agent-types = { workspace = true }
cortexcode-ai-types = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
