[package]
name = "cortexcode-agent-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core agent runtime for cortex agents"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
cortexcode-ai-types = { workspace = true }
cortexcode-ai-stream = { workspace = true }
cortexcode-agent-types = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
