[package]
name = "cortexcode-agent-mcp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP tool integration for cortex agents"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
