[package]
name = "cortexcode-agent-mcp"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "MCP tool integration for cortex agents"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
cortexcode-agent-types = { workspace = true }
cortexcode-agent-tools = { workspace = true }
cortexcode-ai-types = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
rand = "0.8"

[[bin]]
name = "mcp-stub-server"
path = "src/bin/mcp-stub-server.rs"
