[package]
name = "cortexcode-agent-tools"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Built-in tools for cortex agents"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
