[package]
name = "cortexcode-ai-env"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Environment and API key handling for cortex AI"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
dirs = "5"
