[package]
name = "cortexcode-ai-models"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "LLM model registry and discovery for cortex AI"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
cortexcode-ai-types = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
