[package]
name = "cortexcode-ai-oauth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OAuth flows for cortex AI providers"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
