[package]
name = "cortexcode-ai-oauth"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OAuth flows for cortex AI providers"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
url = "2"
