[package]
name = "cortexcode-ai-provider-anthropic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Anthropic provider for cortex AI"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
cortexcode-ai-types = { workspace = true }
cortexcode-ai-stream = { workspace = true }
cortexcode-ai-models = { workspace = true }
cortexcode-ai-env = { workspace = true }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
tracing = "0.1"
