[package]
name = "cortexcode-ai-provider-anthropic"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Anthropic provider for cortex AI"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
cortexcode-ai-types = { workspace = true }
cortexcode-ai-stream = { workspace = true }
cortexcode-ai-util = { workspace = true }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

[dev-dependencies]
