[package]
name = "cortexcode-ai-provider-google"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Google Gemini provider for cortex AI"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
cortexcode-ai-types = { workspace = true }
cortexcode-ai-stream = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
jsonwebtoken = "9"
base64 = "0.21"
