[package]
name = "cortexcode-ai-provider-openai"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "OpenAI provider for cortex AI"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
