[package]
name = "cortexcode-ai-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared types for cortex AI"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
