[package]
name = "cortexcode-ai-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared utilities for cortex AI"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
