[package]
name = "cortexcode-ai-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Shared utilities for cortex AI: JSON repair, hash, headers, sanitization, overflow detection"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
cortexcode-ai-types = { workspace = true }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
