[package]
name = "cortexcode-code-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Configuration for the cortex coding agent"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
