[package]
name = "cortexcode-code-extensions"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WASM extension system for the cortex coding agent"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasmtime = { version = "27", features = ["wat"] }
walkdir = "2"
