[package]
name = "cortexcode-code-main"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Main entry point for the cortex coding agent"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
cortexcode-code-print = { workspace = true }
cortexcode-code-config = { workspace = true }
cortexcode-code-prompts = { workspace = true }
