[package]
name = "cortexcode-code-main"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Main entry point for the cortex coding agent"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
cortexcode-code-print = { workspace = true }
cortexcode-code-config = { workspace = true }
cortexcode-code-prompts = { workspace = true }
cortexcode-code-rpc = { workspace = true }
cortexcode-code-tools = { workspace = true }
cortexcode-code-resources = { workspace = true }
cortexcode-ai-env = { workspace = true }
cortexcode-ai-models = { workspace = true }
cortexcode-ai-types = { workspace = true }
cortexcode-agent-core = { workspace = true }
cortexcode-agent-types = { workspace = true }
cortexcode-agent-tools = { workspace = true }
crossterm = "0.28"
serde_json = "1"
