[package]
name = "cortexcode-code-prompts"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Prompt templates for the cortex coding agent"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
