[package]
name = "cortexcode-code-rpc"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "RPC mode for the cortex coding agent"
readme = "README.md"

[package.metadata.cortex]
publish = true

[dependencies]
